troubleshooting why travis cannot find timearray method in test/timearray
travis cannot find Requests package

updated travis yml

separating operations in test file

explicit call to include with Pkg.dir method

another version of calling include

put mkdir v0.4 into travis

big update to travis yml

PackageEvaluator travis template now

gcc compiler now in travis yml

another tweak to travis yml

weird autocomplete bug

trying Pkg.test method

adding some require packages in Pkg.checkout call

change to clang and other tweaks to travis yml

removed coverage call

added coveralls badge to README

added using Requests to test filess

added Requests to test/REQUIRE and removed using HDF5, JLD, Requests from test files

I think this travis yml is finally correct, along with test/REQUIRE

fixed variable name in timearray

put using Requests explicity in test file since test/REQUIRE not loading it

explicitly calling HDF5 and JLD in test file

commenting out timearray and utilities to see if dataframes can pass

adding using DataFrames to test file

remove non-test-only packages from test/REQUIRE

revert to putting HDF5 back in test/REQUIRE

added Dates to test file using

uncommenting timearray and utilities

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
 language: cpp
-compiler: 
-    - gcc
+compiler:
+    - clang 
 notifications:
     email: false
+env:
+  matrix:
+    - JULIAVERSION="juliareleases"
+    - JULIAVERSION="julianightlies"
 before_install:
     - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-    - sudo add-apt-repository ppa:staticfloat/julianightlies -y
+    - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
     - sudo apt-get update -qq -y
     - sudo apt-get install libpcre3-dev julia -y
-    - git config --global user.name "Travis User"
-    - git config --global user.email "travis@example.net"
+    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
-    - julia -e 'versioninfo(); Pkg.init();'
-    - julia -e 'Pkg.add("TimeSeries"); Pkg.add("HDF5"); Pkg.add("FactCheck")'
-    - mkdir -p ~/.julia/v0.3/Quandl
-    - cp -R ./* ~/.julia/v0.3/Quandl/
-    - julia ./test/runtests.jl
+    - julia -e 'Pkg.init(); Pkg.clone(pwd())'
+    - julia -e 'Pkg.test("Quandl",coverage=true)'
+after_success:
+    - julia -e 'cd(Pkg.dir("Quandl")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
